fixing dark mode

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ html {
   --color-accent-hover: oklch(78.53% 0.0913 283.63 / 71.25%);
   accent-color: var(--color-accent);
   color-scheme: light dark;
+  --background-color: canvas;
+  --text-color: canvastext;
 }
 
 body {
@@ -15,10 +17,16 @@ nav {
     display: flex;
     margin-bottom: 0.5em;
     border-bottom: 1px solid var(--border-color, oklch(80% 3% 200));
-  }
-
-nav {
     --border-color: oklch(50% 10% 200 / 40%);
+    border-bottom: 1px solid var(--border-color, oklch(80% 3% 200));
+    background-color: var(--background-color, canvas);
+    color: var(--text-color, canvastext);
+  }
+  
+@media (prefers-color-scheme: dark) {
+  nav {
+      --border-color: oklch(60% 8% 200 / 40%);
+    }
   }
 
 nav a {
